# quick-lookup

./: .gitattributes  README.md  com.github.johnfactotum.QuickLookup.appdata.xml  com.github.johnfactotum.QuickLookup.desktop  com.github.johnfactotum.QuickLookup.gschema.xml  com.github.johnfactotum.QuickLookup.json  install.sh  meson.build  post_install.py  quick-lookup.js  uninstall.sh
